# quant-trading-rust-template

./: Cargo.toml  README.md
src/: main.rs
src/connectors/: mod.rs  polymarket.rs
src/orderbook/: book.rs
src/signals/: engine.rs
src/strategies/: mean_reversion.rs  mod.rs
